fix retrieval steps

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@ Ryan Perrizo
 
 # Data Retrival
 
-* Scraped Indeed.com using publisher API
+1. Scraped Indeed.com using publisher API
   * Use query string and city name to scrape links
   * Use python requests library and BeautifulSoup4 to scrape
 
-* Assigned labels based on query string
+2. Assigned labels based on query string
   * labels = 'full stack developer', 'front end developer', 'human resources'
 
-* Took top results from 10 major cities
+3. Took top results from 10 major cities
 
 ---
 
