Fix stemmer list

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Ryan Perrizo
 * **Stemmers**:
   * PortStemmer
   * SnowballStemmer
-  * No Stemmer None
+  * No Stemmer
 
 * **Text Featurization:**
   * TFIDF with and without n-grams
