--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@ Ryan Perrizo
 # Conclusion
 
 * Pseudo labels worked better than expected
-* Messy scraped data could be cleaned better
-* Multinomial Naive Bayes performed better with N-grams
-* Stochastic Gradient Descent 
+* Need to figure out a better way to clean the data
+* Multinomial Naive Bayes performed better with 1-2 N-grams
+* Given more time I would investigate the misclassified front end and full stack documents to identify a pattern
     </textarea>
     <script src="remark-latest.min.js">
     </script>
