add confusion matrix

--- a/index.html
+++ b/index.html
@@ -150,9 +150,14 @@ Ryan Perrizo
 
 |   | - Full Stack -  | - Front End -  | - Human Resources -  |
 |---|:---:|:---:|:---:|
+|**Initial**   |.7941   |.7370   |.9869   |
 |**Final**   |.8042   |.7577   |.9876   |
-|**Baseline**   |.7941   |.7370   |.9869   |
 
+```
+[[ 844  196   12]
+ [ 194  627    9]
+ [   9    2 1278]]
+ ```
 ---
 
 # Conclusion
