--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Ryan Perrizo
 
 |   | - Full Stack -  | - Front End -  | - Human Resources -  |
 |---|:---:|:---:|:---:|
-|**Initial**   |.7941   |.7370   |.9869   |
+|**Before Tuning**   |.7941   |.7370   |.9869   |
 |**Final**   |.8042   |.7577   |.9876   |
 
 ```
