--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 class: center, middle
 
 # Job Description Document Classification
-      **UW PCE - Machine Learning 410 Presentation**
+      UW PCE - Machine Learning 410 Presentation
 
 Ryan Perrizo
 
